Fix examples  tests to enable reflective access to java.io.FileSystem